--- a/app/www/index.html
+++ b/app/www/index.html
@@ -1,11 +1,45 @@
 <html>
 <head>
+    <style type="text/css">
+        html{
+            overflow: hidden;
+            margin:0;
+            padding:0;
+        }
+        .app-loader{
+            position: fixed;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            text-align: center;
+            z-index: 20;
+        }
+        .app-loader .loading{
+            position: absolute;
+            width: 100%;
+            top: 25%;
+        }
+        .app-loader .ion-ios7-reloading{
+            font-size: 3em;
+        }
+    </style>
     <link href='assets/vendors/reset.css' rel='stylesheet' type='text/css'>
-    <link href='assets/themes/slate.bootstrap.min.css' rel='stylesheet' type='text/css' id="bootstrap" />
     <link href='assets/vendors/css/ionicons.min.css' rel='stylesheet' type='text/css'>
     <link href='assets/index.css' rel='stylesheet' type='text/css'>
 </head>
 <body>
+
+
+<div class="app-loader bg-primary">
+    <div class="loading">
+        loading...
+        <br/><br/>
+        <i class="ion-ios7-reloading"></i>
+    </div>
+</div>
+
+
 
 <div class="top">
     <h1 data-bind="text: appTitle"></h1>
@@ -111,22 +145,15 @@
     </div>
 </div>
 
-<div class="app-loader bg-primary">
-    <div class="loading">
-        loading...
-        <br/><br/>
-        <i class="ion-ios7-reloading"></i>
-    </div>
-</div>
 
 
 
-
-
+<link href='assets/themes/slate.bootstrap.min.css' rel='stylesheet' type='text/css' id="bootstrap" />
 <script type="text/javascript" src="assets/vendors/jquery-2.1.0.min.js"></script>
 <script type="text/javascript" src="assets/vendors/jquery.transit.min.js"></script>
 <script type="text/javascript" src="assets/vendors/bootstrap.min.js"></script>
 <script type="text/javascript" src="assets/vendors/knockout-3.1.0.js"></script>
-<script type="text/javascript" src="assets/app.js"></script>
+<script data-main="assets/app" src="assets/require-2.1.11.js"></script>
+
 </body>
 </html>
