Add transition loader

--- a/app/www2/index.html
+++ b/app/www2/index.html
@@ -152,6 +152,7 @@
                             </div>
                         </div>
                         <div data-bind="if: type()=='file'">
+                            <div class="ion-ios7-cloud-outline"></div>
                             <img data-bind="attr:{src:preview_url,title:name}" class="t-all" />
                             <div class="actions  t-all">
                                 <a href="#" class="ion-ios7-trash-outline  btn btn-primary t-all"></a>
