--- a/app/www2/index.html
+++ b/app/www2/index.html
@@ -59,6 +59,7 @@
                 </div>
                 <div class="navbar-collapse collapse pull-right">
                     <ul class="nav navbar-nav">
+
                         <li data-bind="with:navigation, css: {disabled:navigation.location()=='/'}" class="up">
                             <a href="#" class="t-font"
                                     ><span class=" ion-ios7-arrow-thin-up"></span>Up
@@ -169,6 +170,19 @@
                             </div>
                         </div>
                     </li>
+                </ul>
+            </div>
+
+
+            <div class="pagination-container text-center">
+                <ul class="pagination well well-sm">
+                    <li><a href="#">&laquo;</a></li>
+                    <li><a href="#">1</a></li>
+                    <li><a href="#">2</a></li>
+                    <li><a href="#">3</a></li>
+                    <li><a href="#">4</a></li>
+                    <li><a href="#">5</a></li>
+                    <li><a href="#">&raquo;</a></li>
                 </ul>
             </div>
 
