--- a/app/www2/index.html
+++ b/app/www2/index.html
@@ -210,17 +210,17 @@
                               method="post"
                               enctype="multipart/form-data">
                             <br/>
-                            <div class="input-group input-group-lg">
+                            <div class="input-group ">
                                 <span class="input-group-addon ion-ios7-cloud-upload-outline"></span>
                                 <input type="file" class="form-control" name="img" />
                             </div>
                             <br/>
-                            <div class="input-group input-group-lg">
+                            <div class="input-group ">
                                 <span class="input-group-addon ion-ios7-compose-outline"></span>
                                 <textarea class="form-control" name="comment" placeholder="commit message"></textarea>
                             </div>
                             <br/>
-                            <input type="submit" class="btn btn-lg pull-right btn-default submit" value="Save"/>
+                            <input type="submit" class="btn pull-right btn-default submit" value="Save"/>
                         </form>
                     </div>
                 </div>
