--- a/app/www2/index.html
+++ b/app/www2/index.html
@@ -131,17 +131,23 @@
 
         <div class="fileBrowser" data-bind="with: files,css:{loading:!files.loaded()}">
             <div class="display-table" data-bind="if: display()=='table'">
-                <table>
+                <table class="table table-striped table-hover table-condensed">
                     <tr>
                         <th>type</th>
                         <th>name</th>
                         <th>path</th>
+                        <th>edit</th>
+                        <th>logs</th>
+                        <th>trash</th>
                     </tr>
                     <tbody  data-bind="foreach: items">
-                        <tr>
+                        <tr data-bind="css:type()">
                             <td data-bind="text: type"></td>
                             <td data-bind="text: name"></td>
                             <td data-bind="text: path"></td>
+                            <td><span class="ion-ios7-cloud-upload-outline  btn btn-primary t-all"></span></td>
+                            <td><span class="ion-ios7-recording-outline  btn btn-primary t-all"></span></td>
+                            <td><span class="ion-ios7-trash-outline  btn btn-primary t-all"></span></td>
                         </tr>
                     </tbody>
                 </table>
