--- a/app/www2/index.html
+++ b/app/www2/index.html
@@ -40,6 +40,7 @@
 
 <div class="main">
 
+<!-- app loader -->
     <div data-bind="ifnot: ready">
         <div class="app-loader bg-primary" data-bind="css: {'t-slide-left':loaded}">
             <div class="loading">
@@ -49,9 +50,12 @@
             </div>
         </div>
     </div>
+<!-- app loader -->
 
+<!-- app -->
     <div data-bind="if: ready">
 
+        <!-- header -->
         <div class="navbar navbar-inverse navbar-fixed-top t-color">
             <div class="container">
                 <div class="navbar-header">
@@ -119,13 +123,15 @@
                 </div>
             </div>
         </div>
+        <!-- header -->
 
         <div class="fileBrowser" data-bind="with: files,css:{loading:!files.loaded()}">
 
+            <!-- navigation -->
             <div class="container-pager">
                 <div class="pull-left">
                     <ul class="nav navbar-nav navigation" data-bind="foreach: $parent.navigation.breadcrumb">
-                        <li data-bind="css:{disabled:active}"><a href="#" class="t-font" data-bind="text: name"></a></li>
+                        <li data-bind="css:{disabled:active}"><a href="#" class="t-font" data-bind="text: short_name"></a></li>
                     </ul>
                 </div>
                 <div class="pull-right">
@@ -137,47 +143,53 @@
                     </ul>
                 </div>
             </div>
+            <!-- navigation -->
 
 
+            <!-- browser -->
             <div data-bind="if: items().length">
                 <div class="items-display">
 
+                    <!-- table -->
                     <div class="display-table" data-bind="if: display()=='table'">
                         <table class="table table-striped table-hover table-condensed">
                             <tr>
                                 <th>type</th>
                                 <th>name</th>
-                                <th>path</th>
                                 <th>edit</th>
                                 <th>logs</th>
                                 <th>trash</th>
                             </tr>
                             <tbody data-bind="foreach: items">
-                            <tr data-bind="css:type()">
-                                <td data-bind="text: type"></td>
+                            <tr data-bind="css:type(),attr:{title:path}">
+                                <td data-bind="css:type()=='file'?'ion-ios7-photos-outline':'ion-ios7-folder-outline'"></td>
                                 <td data-bind="text: name"></td>
-                                <td data-bind="text: path"></td>
-                                <td><span class="ion-ios7-cloud-upload-outline  btn btn-primary t-all"></span></td>
-                                <td><span class="ion-ios7-recording-outline  btn btn-primary t-all"></span></td>
-                                <td><span class="ion-ios7-trash-outline  btn btn-primary t-all"></span></td>
+                                <td><span class="ion-ios7-cloud-upload-outline btn t-all"></span></td>
+                                <td><span class="ion-ios7-recording-outline btn t-all"></span></td>
+                                <td><span class="ion-ios7-trash-outline btn t-all"></span></td>
                             </tr>
                             </tbody>
                         </table>
                     </div>
+                    <!-- table -->
 
+                    <!-- thumbs -->
                     <div class="display-thumbs" data-bind="if: display()=='thumbs',css:size()">
                         <ul data-bind="foreach: items">
                             <li class="t-all" data-bind="css:type()">
+                                <!-- directory -->
                                 <div data-bind="if: type()=='directory'">
                                     <a href="#" data-bind="attr:{title:name}">
                                         <i class="ion-ios7-folder"></i>
-                                        <span data-bind="text:name"></span>
+                                        <span data-bind="text:short_name"></span>
                                     </a>
                                     <div class="actions t-all">
                                         <a href="#" class="ion-ios7-trash-outline t-color btn btn-primary"></a>
                                         <a href="#" class="ion-ios7-compose t-color btn btn-primary"></a>
                                     </div>
                                 </div>
+                                <!-- directory -->
+                                <!-- file -->
                                 <div data-bind="if: type()=='file'">
                                     <div class="ion-ios7-cloud-outline"></div>
                                     <img data-bind="attr:{src:preview_url,title:name}" class="t-all" />
@@ -187,9 +199,11 @@
                                         <a href="#" class="ion-ios7-recording-outline  btn  btn-primary t-all"></a>
                                     </div>
                                 </div>
+                                <!-- file -->
                             </li>
                         </ul>
                     </div>
+                    <!-- thumbs -->
 
                 </div>
             </div>
@@ -199,11 +213,13 @@
                     No items !
                 </div>
             </div>
+            <!-- browser -->
 
+            <!-- navigation -->
             <div class="container-pager">
                 <div class="pull-left">
                     <ul class="nav navbar-nav navigation" data-bind="foreach: $parent.navigation.breadcrumb">
-                        <li data-bind="css:{disabled:active}"><a href="#" class="t-font" data-bind="text: name"></a></li>
+                        <li data-bind="css:{disabled:active}"><a href="#" class="t-font" data-bind="text: short_name"></a></li>
                     </ul>
                 </div>
                 <div class="pull-right">
@@ -215,14 +231,18 @@
                     </ul>
                 </div>
             </div>
+            <!-- navigation -->
 
-
+            <!-- loader -->
             <div class="loader">
                 <div class="bg-primary t-all"></div>
                 <i class="ion-ios7-reloading"></i>
             </div>
+            <!-- loader -->
+
         </div>
 
+        <!-- pop-in -->
         <div class="fileEdit t-all bg-primary" data-bind="with: fileEdit, css:{active:fileEdit.tab()!=''}">
 
             <div class="tabs">
@@ -284,16 +304,15 @@
             </ul>
 
         </div>
-
-
-
+        <!-- pop-in -->
 
     </div>
+<!-- app -->
 
-
-
+<!-- style switch -->
     <link rel='stylesheet' type='text/css' data-bind="attr:{href: theme.path}">
     <link rel='stylesheet' type='text/css' data-bind="attr:{href: theme.path_prev}">
+<!-- style switch -->
 
 </div>
 
@@ -303,9 +322,6 @@
 <script type="text/javascript" src="assets/vendors/jquery.scrollTo.min.js"></script>
 <script type="text/javascript" src="assets/vendors/jquery.ba-throttle-debounce.min.js"></script>
 <script type="text/javascript" src="assets/vendors/knockout-3.1.0.js"></script>
-<!--
-<script type="text/javascript" src="assets/vendors/bootstrap.min.js"></script>
--->
 <script data-main="assets/main" src="assets/require-2.1.11.js"></script>
 
 </body>
