remove useless code

--- a/app/www2/index.html
+++ b/app/www2/index.html
@@ -245,9 +245,7 @@
                         <div class="ion-ios7-cloud-outline preview">
                             <img data-bind="attr:{src:preview_url,title:name}" class="t-all" />
                         </div>
-                        <form data-bind="attr:{action:edit_url}"
-                              method="post"
-                              enctype="multipart/form-data">
+                        <form>
                             <br/>
                             <div class="input-group ">
                                 <span class="input-group-addon ion-ios7-cloud-upload-outline"></span>
