--- a/app/www2/index.html
+++ b/app/www2/index.html
@@ -167,8 +167,8 @@
                             <li class="t-all" data-bind="css:type()">
                                 <!-- directory -->
                                 <div data-bind="if: type()=='directory'">
+                                    <i class="ion-ios7-folder-outline t-all"></i>
                                     <a href="#" data-bind="attr:{title:name}">
-                                        <i class="ion-ios7-folder"></i>
                                         <span data-bind="text:short_name"></span>
                                     </a>
                                     <div class="actions t-all">
