--- a/app/www2/index.html
+++ b/app/www2/index.html
@@ -142,19 +142,28 @@
                     <div class="display-table" data-bind="if: display()=='table'">
                         <table class="table table-striped table-hover table-condensed">
                             <tr>
-                                <th>type</th>
-                                <th>name</th>
-                                <th>edit</th>
-                                <th>logs</th>
-                                <th>trash</th>
+                                <th class="type-col">type</th>
+                                <th class="name-col">name</th>
+                                <th class="edit-col"></th>
+                                <th class="logs-col"></th>
+                                <th class="trash-col"></th>
                             </tr>
                             <tbody data-bind="foreach: items">
                             <tr data-bind="css:type(),attr:{title:path}">
-                                <td data-bind="css:type()=='file'?'ion-ios7-photos-outline':'ion-ios7-folder-outline'"></td>
-                                <td data-bind="text: name"></td>
-                                <td><span class="ion-ios7-cloud-upload-outline btn t-all"></span></td>
-                                <td><span class="ion-ios7-recording-outline btn t-all"></span></td>
-                                <td><span class="ion-ios7-trash-outline btn t-all"></span></td>
+                                <td class="type-col">
+                                    <span class="btn t-all"
+                                          data-bind="css:type()=='file'?'ion-ios7-photos-outline':'ion-ios7-folder-outline'"></span>
+                                </td>
+                                <td class="name-col" data-bind="text: name"></td>
+                                <td class="edit-col">
+                                    <span class="ion-ios7-cloud-upload-outline btn t-all"></span>
+                                </td>
+                                <td class="logs-col">
+                                    <span class="ion-ios7-recording-outline btn t-all"></span>
+                                </td>
+                                <td class="trash-col">
+                                    <span class="ion-ios7-trash-outline btn t-all"></span>
+                                </td>
                             </tr>
                             </tbody>
                         </table>
